[gd_scene load_steps=45 format=4 uid="uid://f72spoyq55tl"]

[ext_resource type="Script" uid="uid://b4teklbw611ei" path="res://scripts/home.gd" id="1_aish6"]
[ext_resource type="Texture2D" uid="uid://yagan5v5mpbo" path="res://art/map_resources/House/Objects/Indoor_Decor.png" id="1_u4wd2"]
[ext_resource type="Texture2D" uid="uid://dcgnxukrjpy8m" path="res://art/map_resources/House/Walls/Wood_Floor_1.png" id="2_w18ys"]
[ext_resource type="Texture2D" uid="uid://bbgjg1fbmarwj" path="res://art/map_resources/House/Buildings/Houses_Interiors/Wood_Stairs.png" id="3_4fycn"]
[ext_resource type="Texture2D" uid="uid://brd7a8iwudwil" path="res://art/map_resources/House/Buildings/Houses_Interiors/Interior_Walls.png" id="4_vc333"]
[ext_resource type="Texture2D" uid="uid://dbd0scu411hsp" path="res://art/map_resources/House/Walls/Wood_Door.png" id="5_hhep5"]
[ext_resource type="Texture2D" uid="uid://b4k3apmhlcefh" path="res://art/map_resources/House/Buildings/Doors.png" id="6_cmjdo"]
[ext_resource type="Texture2D" uid="uid://d3dyqiri4vl0d" path="res://art/map_resources/House/Walls/Wood_Door_Anim.png" id="7_yu5fn"]
[ext_resource type="PackedScene" uid="uid://bb0yoc2888fyf" path="res://scenes/player.tscn" id="8_ip4d6"]
[ext_resource type="Texture2D" uid="uid://cmhhek8ugcvyw" path="res://art/home/Windows.png" id="8_vc333"]
[ext_resource type="Script" uid="uid://cr0rcyoocasg1" path="res://scripts/chest.gd" id="9_hhep5"]
[ext_resource type="Script" uid="uid://bi4jx4trmh88r" path="res://scripts/synthesis_table.gd" id="11_ip4d6"]
[ext_resource type="PackedScene" uid="uid://cbwxpl1ykiqax" path="res://scenes/storage_ui.tscn" id="11_yu5fn"]
[ext_resource type="Script" uid="uid://cejcdoohf5q6k" path="res://scripts/Home_to_Hometwon.gd" id="12_gi00y"]
[ext_resource type="PackedScene" uid="uid://f7nap1ru2r03" path="res://scenes/Synthesis/synthesis_ui.tscn" id="12_ip4d6"]
[ext_resource type="PackedScene" uid="uid://cc3pjfk4qvxry" path="res://scenes/Inventory/inventory_ui.tscn" id="16_o7pnx"]
[ext_resource type="Texture2D" uid="uid://boy0sa1mcrkwv" path="res://art/Inventory/UI_Buttons.png" id="17_aish6"]
[ext_resource type="PackedScene" uid="uid://k3lcggpycug7" path="res://scenes/inner_margin.tscn" id="18_snnha"]
[ext_resource type="PackedScene" uid="uid://c125udyftsnt6" path="res://scenes/NoticeBoardDetail.tscn" id="19_ppa51"]
[ext_resource type="AudioStream" uid="uid://cgowr3gwe45qb" path="res://audio/Clement Panchout_ Village_ 2002.wav" id="19_snnha"]
[ext_resource type="PackedScene" uid="uid://bubtpb2sakr5o" path="res://scenes/notice_board.tscn" id="20_e42qu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_reixx"]
texture = ExtResource("1_u4wd2")
0:2/size_in_atlas = Vector2i(1, 2)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.02526, 8, -6.38498, -11.511, 5.48569, -10.7915, 6.20513, 3.0576, 6.20513, 12.9498, -5.84541, 12.77)
0:1/size_in_atlas = Vector2i(2, 1)
0:1/0 = 0
3:2/0 = 0
2:0/size_in_atlas = Vector2i(1, 2)
2:0/0 = 0
0:0/size_in_atlas = Vector2i(2, 1)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-13.5793, -6.1152, 13.0398, -5.39576, 14.2988, 0, 11.0613, 2.69788, 9.8023, 5.39576, 8, 3.95689, -0.0899277, 3.23745, -8, 4.49647, -10.3419, 3.95689, -10.5217, 2.87774, -13.5793, 2.33816)
4:0/0 = 0
4:0/0/texture_origin = Vector2i(0, 8)
3:0/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:0/0 = 0
5:0/0/texture_origin = Vector2i(0, 7)
5:0/0/y_sort_origin = -15
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.2159, -6.47491, -1.79859, -5.57562, 3.23746, -5.2159, 5.39576, -8, 5.57562, -2.51802, -0.539576, -1.43887, -5.03605, -2.1583)
5:2/0 = 0
5:2/0/texture_origin = Vector2i(2, 11)
5:2/0/z_index = 3
5:2/0/y_sort_origin = 3
4:2/0 = 0
4:2/0/texture_origin = Vector2i(-8, -7)
4:2/0/z_index = 3
5:3/0 = 0
5:4/0 = 0
4:3/size_in_atlas = Vector2i(1, 2)
4:3/0 = 0
2:2/size_in_atlas = Vector2i(1, 2)
2:2/0 = 0
3:3/size_in_atlas = Vector2i(1, 2)
3:3/0 = 0
2:4/size_in_atlas = Vector2i(1, 2)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.84541, -1.07915, 6.02527, -1.07915, 5.84541, 8, 5.66555, 12.5901, -5.48569, 12.4103)
3:5/size_in_atlas = Vector2i(2, 1)
3:5/0 = 0
3:5/0/texture_origin = Vector2i(0, 5)
2:6/size_in_atlas = Vector2i(1, 2)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.76625, 8, -3.50724, 4.67633, 3.32739, 4.49647, 4.5864, 8, 4.5864, 12.9498, -2.60795, 12.4103)
3:6/size_in_atlas = Vector2i(1, 2)
3:6/0 = 0
3:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.76625, 8, -2.42809, 8, 1.16908, 8, 2.96767, 8, 2.96767, 12.9498, -2.60795, 12.4103)
4:6/0 = 0
4:7/0 = 0
4:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-3.95689, 1.97845, 1.97845, 1.25901, 2.1583, 4.85619, -3.95689, 5.03605)
5:5/0 = 0
1:12/0 = 0
1:2/size_in_atlas = Vector2i(1, 2)
1:2/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
2:9/0/texture_origin = Vector2i(2, 9)
2:9/0/z_index = 3
3:9/0 = 0
4:9/0 = 0
4:8/0 = 0
3:8/0 = 0
3:8/0/texture_origin = Vector2i(3, 4)
2:8/0 = 0
1:8/0 = 0
0:8/0 = 0
0:4/size_in_atlas = Vector2i(1, 2)
0:4/0 = 0
0:4/0/texture_origin = Vector2i(-7, -6)
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(4.5864, 11.511, 13.0398, 12.2304, 12.3203, 17.4463, 3.50725, 17.4463)
1:4/size_in_atlas = Vector2i(1, 2)
1:4/0 = 0
1:4/0/texture_origin = Vector2i(0, -9)
1:4/0/y_sort_origin = 13
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-5.66555, 14.7484, 5.84541, 14.3887, 5.48569, 19.6046, -5.48569, 19.9643)
0:6/size_in_atlas = Vector2i(1, 2)
0:6/0 = 0
0:6/0/texture_origin = Vector2i(0, 8)
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-4.94611, -1.97845, 5.30584, -1.25901, 4.94612, 1.97844, 3.86696, 6.47491, -4.76625, 5.57562)
1:6/size_in_atlas = Vector2i(1, 2)
1:6/0 = 0
1:6/0/texture_origin = Vector2i(8, -7)
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-14.1189, 13.1297, -9.44258, 12.4103, -6.20512, 12.2304, -3.32738, 12.9498, -2.96767, 18.1657, -13.7592, 17.6262)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_uhids"]
texture = ExtResource("2_w18ys")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_gi00y"]
texture = ExtResource("3_4fycn")

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_rpgsi"]
texture = ExtResource("4_vc333")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
0:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_ju5sp"]
texture = ExtResource("5_hhep5")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o7pnx"]
texture = ExtResource("6_cmjdo")
0:0/0 = 0
2:0/0 = 0
4:0/0 = 0
6:0/0 = 0
8:0/0 = 0
10:0/0 = 0
0:1/0 = 0
2:1/0 = 0
4:1/0 = 0
6:1/0 = 0
8:1/0 = 0
10:1/0 = 0
0:2/0 = 0
2:2/0 = 0
4:2/0 = 0
6:2/0 = 0
8:2/0 = 0
10:2/0 = 0
0:3/0 = 0
2:3/0 = 0
4:3/0 = 0
6:3/0 = 0
8:3/0 = 0
10:3/0 = 0
0:4/0 = 0
2:4/0 = 0
4:4/0 = 0
6:4/0 = 0
8:4/0 = 0
10:4/0 = 0
0:5/0 = 0
2:5/0 = 0
4:5/0 = 0
6:5/0 = 0
8:5/0 = 0
10:5/0 = 0
0:6/0 = 0
2:6/0 = 0
4:6/0 = 0
6:6/0 = 0
8:6/0 = 0
10:6/0 = 0
0:7/0 = 0
2:7/0 = 0
4:7/0 = 0
6:7/0 = 0
8:7/0 = 0
10:7/0 = 0
0:8/0 = 0
2:8/0 = 0
4:8/0 = 0
6:8/0 = 0
8:8/0 = 0
10:8/0 = 0
0:9/0 = 0
2:9/0 = 0
4:9/0 = 0
6:9/0 = 0
8:9/0 = 0
10:9/0 = 0
0:10/0 = 0
2:10/0 = 0
4:10/0 = 0
6:10/0 = 0
8:10/0 = 0
10:10/0 = 0
0:11/0 = 0
2:11/0 = 0
4:11/0 = 0
6:11/0 = 0
8:11/0 = 0
10:11/0 = 0
0:12/0 = 0
2:12/0 = 0
4:12/0 = 0
6:12/0 = 0
8:12/0 = 0
10:12/0 = 0
0:13/0 = 0
2:13/0 = 0
4:13/0 = 0
6:13/0 = 0
8:13/0 = 0
10:13/0 = 0
0:14/0 = 0
2:14/0 = 0
4:14/0 = 0
6:14/0 = 0
8:14/0 = 0
10:14/0 = 0
0:15/0 = 0
2:15/0 = 0
4:15/0 = 0
6:15/0 = 0
8:15/0 = 0
10:15/0 = 0
0:16/0 = 0
2:16/0 = 0
4:16/0 = 0
6:16/0 = 0
8:16/0 = 0
10:16/0 = 0
0:17/0 = 0
2:17/0 = 0
4:17/0 = 0
6:17/0 = 0
8:17/0 = 0
10:17/0 = 0
0:18/0 = 0
2:18/0 = 0
4:18/0 = 0
6:18/0 = 0
8:18/0 = 0
10:18/0 = 0
0:19/0 = 0
2:19/0 = 0
4:19/0 = 0
6:19/0 = 0
8:19/0 = 0
10:19/0 = 0
0:20/0 = 0
2:20/0 = 0
4:20/0 = 0
6:20/0 = 0
8:20/0 = 0
10:20/0 = 0
0:21/0 = 0
2:21/0 = 0
4:21/0 = 0
6:21/0 = 0
8:21/0 = 0
10:21/0 = 0
0:22/0 = 0
2:22/0 = 0
4:22/0 = 0
6:22/0 = 0
8:22/0 = 0
10:22/0 = 0
0:23/0 = 0
2:23/0 = 0
4:23/0 = 0
6:23/0 = 0
8:23/0 = 0
10:23/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_aish6"]
texture = ExtResource("7_yu5fn")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_hhep5"]
texture = ExtResource("8_vc333")
0:6/size_in_atlas = Vector2i(2, 2)
0:6/0 = 0
2:14/size_in_atlas = Vector2i(3, 2)
2:14/0 = 0

[sub_resource type="TileSet" id="TileSet_yxilm"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_reixx")
sources/1 = SubResource("TileSetAtlasSource_uhids")
sources/2 = SubResource("TileSetAtlasSource_gi00y")
sources/3 = SubResource("TileSetAtlasSource_rpgsi")
sources/4 = SubResource("TileSetAtlasSource_ju5sp")
sources/5 = SubResource("TileSetAtlasSource_o7pnx")
sources/6 = SubResource("TileSetAtlasSource_aish6")
sources/7 = SubResource("TileSetAtlasSource_hhep5")

[sub_resource type="AtlasTexture" id="AtlasTexture_cmjdo"]
atlas = ExtResource("1_u4wd2")
region = Rect2(65, 2, 15, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vc333"]
size = Vector2(23, 22.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_snnha"]
size = Vector2(14.625, 11)

[sub_resource type="AtlasTexture" id="AtlasTexture_hhep5"]
atlas = ExtResource("1_u4wd2")
region = Rect2(49, 48, 14, 31)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cmjdo"]
size = Vector2(30, 37)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e42qu"]
size = Vector2(14, 26)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rpgsi"]
size = Vector2(33, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_oubgv"]
atlas = ExtResource("17_aish6")
region = Rect2(129, 209, 14, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_aish6"]
texture = SubResource("AtlasTexture_oubgv")

[sub_resource type="AtlasTexture" id="AtlasTexture_5vqhb"]
atlas = ExtResource("17_aish6")
region = Rect2(113, 209, 14, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_snnha"]
texture = SubResource("AtlasTexture_5vqhb")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_e42qu"]
texture = SubResource("AtlasTexture_oubgv")

[sub_resource type="AtlasTexture" id="AtlasTexture_wylva"]
atlas = ExtResource("17_aish6")
region = Rect2(97, 209, 14, 14)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ppa51"]
content_margin_left = 20.0
content_margin_top = 20.0
content_margin_right = 20.0
content_margin_bottom = 20.0
texture = SubResource("AtlasTexture_wylva")

[node name="Home" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_aish6")
inventory_ui_path = NodePath("CanvasLayer/InventoryUi")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_yxilm")
format = 2

[node name="Floor" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAAAAAAAQAAAAAAAAABAAAAAQAAAAAAAAACAAAAAQAAAAAAAAADAAAAAQAAAAAAAAAEAAAAAQAAAAAAAAAFAAAAAQAAAAAAAAAGAAAAAQAAAAAAAAAHAAAAAQAAAAAAAAAAAAEAAQAAAAAAAAABAAEAAQAAAAAAAAACAAEAAQAAAAAAAAADAAEAAQAAAAAAAAAEAAEAAQAAAAAAAAAFAAEAAQAAAAAAAAAGAAEAAQAAAAAAAAAHAAEAAQAAAAAAAAAHAAIAAQAAAAAAAAAAAAIAAQAAAAAAAAABAAIAAQAAAAAAAAACAAIAAQAAAAAAAAADAAIAAQAAAAAAAAAEAAIAAQAAAAAAAAAGAAIAAQAAAAAAAAAAAAMAAQAAAAAAAAAAAAQAAQAAAAAAAAABAAUAAQAAAAAAAAABAAYAAQAAAAAAAAAAAAUAAQAAAAAAAAAAAAYAAQAAAAAAAAAAAAcAAQAAAAAAAAABAAcAAQAAAAAAAAABAAgAAQAAAAAAAAACAAgAAQAAAAAAAAADAAgAAQAAAAAAAAAEAAgAAQAAAAAAAAAFAAgAAQAAAAAAAAAGAAgAAQAAAAAAAAAHAAgAAQAAAAAAAAAIAAgAAQAAAAAAAAANAAgAAQAAAAAAAAAOAAgAAQAAAAAAAAAJAAgAAQAAAAAAAAAKAAgAAQAAAAAAAAALAAgAAQAAAAAAAAAMAAgAAQAAAAAAAAABAAMAAQAAAAAAAAACAAMAAQAAAAAAAAADAAMAAQAAAAAAAAAEAAMAAQAAAAAAAAAFAAMAAQAAAAAAAAAGAAQAAQAAAAAAAAAHAAQAAQAAAAAAAAAIAAQAAQAAAAAAAAAJAAQAAQAAAAAAAAAKAAQAAQAAAAAAAAALAAQAAQAAAAAAAAAMAAQAAQAAAAAAAAANAAQAAQAAAAAAAAAOAAQAAQAAAAAAAAAGAAMAAQAAAAAAAAAHAAMAAQAAAAAAAAAIAAMAAQAAAAAAAAAJAAMAAQAAAAAAAAAKAAMAAQAAAAAAAAALAAMAAQAAAAAAAAAMAAMAAQAAAAAAAAANAAMAAQAAAAAAAAAOAAMAAQAAAAAAAAAOAAcAAQAAAAAAAAANAAcAAQAAAAAAAAAMAAcAAQAAAAAAAAALAAcAAQAAAAAAAAAKAAcAAQAAAAAAAAAJAAcAAQAAAAAAAAAIAAcAAQAAAAAAAAAHAAYAAQAAAAAAAAAGAAYAAQAAAAAAAAAFAAYAAQAAAAAAAAAEAAYAAQAAAAAAAAADAAYAAQAAAAAAAAACAAUAAQAAAAAAAAABAAQAAQAAAAAAAAACAAQAAQAAAAAAAAADAAQAAQAAAAAAAAAEAAQAAQAAAAAAAAAFAAQAAQAAAAAAAAADAAUAAQAAAAAAAAAEAAUAAQAAAAAAAAAFAAUAAQAAAAAAAAAGAAUAAQAAAAAAAAAHAAUAAQAAAAAAAAAIAAUAAQAAAAAAAAAJAAUAAQAAAAAAAAAKAAUAAQAAAAAAAAANAAUAAQAAAAAAAAAOAAUAAQAAAAAAAAACAAYAAQAAAAAAAAACAAcAAQAAAAAAAAADAAcAAQAAAAAAAAAEAAcAAQAAAAAAAAAFAAcAAQAAAAAAAAAGAAcAAQAAAAAAAAAHAAcAAQAAAAAAAAAIAAYAAQAAAAAAAAAJAAYAAQAAAAAAAAAKAAYAAQAAAAAAAAAOAAYAAQAAAAAAAAANAAYAAQAAAAAAAAAAAAgAAQAAAAAAAAAAAAkAAQAAAAAAAAABAAkAAQAAAAAAAAACAAkAAQAAAAAAAAADAAkAAQAAAAAAAAAEAAkAAQAAAAAAAAAFAAkAAQAAAAAAAAAGAAkAAQAAAAAAAAAHAAkAAQAAAAAAAAAIAAkAAQAAAAAAAAAJAAkAAQAAAAAAAAAKAAkAAQAAAAAAAAALAAkAAQAAAAAAAAAMAAkAAQAAAAAAAAANAAkAAQAAAAAAAAAOAAkAAQAAAAAAAAAFAAIAAQAAAAAAAAALAAUAAQAAAAAAAAALAAYAAQAAAAAAAAAMAAUAAQAAAAAAAAAMAAYAAQAAAAAAAAAIAAAAAQAAAAAAAAAJAAAAAQAAAAAAAAAKAAAAAQAAAAAAAAAKAAEAAQAAAAAAAAALAAEAAQAAAAAAAAAMAAEAAQAAAAAAAAAMAAAAAQAAAAAAAAANAAAAAQAAAAAAAAAOAAAAAQAAAAAAAAAOAAEAAQAAAAAAAAAOAAIAAQAAAAAAAAANAAIAAQAAAAAAAAAMAAIAAQAAAAAAAAALAAIAAQAAAAAAAAAKAAIAAQAAAAAAAAAJAAIAAQAAAAAAAAAIAAIAAQAAAAAAAAAIAAEAAQAAAAAAAAAJAAEAAQAAAAAAAAANAAEAAQAAAAAAAAALAAAAAQAAAAAAAAA=")
tile_set = SubResource("TileSet_yxilm")

[node name="Wall" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAAGAAoAAwABAAIAAAAHAAoAAwABAAIAAAAIAAoAAwABAAIAAAAJAAoAAwABAAIAAAAKAAoAAwABAAIAAAALAAoAAwABAAIAAAAMAAoAAwABAAIAAAANAAoAAwABAAIAAAAOAAoAAwABAAIAAAAPAAoAAwACAAIAAAAFAAoAAwABAAIAAAAEAAoAAwABAAIAAAADAAoAAwABAAIAAAACAAoAAwABAAIAAAABAAoAAwABAAIAAAAAAAoAAwABAAIAAAD//woAAwAAAAIAAAD//wkAAwAAAAEAAAD//wgAAwAAAAEAAAD//wcAAwAAAAEAAAD//wYAAwAAAAEAAAD//wUAAwAAAAEAAAD//wQAAwAAAAEAAAD//wMAAwAAAAEAAAD//wIAAwAAAAEAAAD//wEAAwAAAAEAAAD//wAAAwAAAAEAAAD/////AwAAAAAAAAAAAP//AwABAAAAAAABAP//AwABAAAAAAACAP//AwABAAAAAAADAP//AwABAAAAAAAFAP//AwABAAAAAAAGAP//AwABAAAAAAAHAP//AwABAAAAAAAAAAAAAwADAAMAAAABAAAAAwADAAMAAAACAAAAAwADAAMAAAADAAAAAwADAAMAAAAEAP//AwABAAAAAAAEAAAAAwADAAMAAAAFAAAAAwADAAMAAAAGAAAAAwADAAMAAAAHAAAAAwADAAMAAAAAAAEAAwADAAMAAAABAAEAAwADAAMAAAACAAEAAwADAAMAAAAEAAEAAwADAAMAAAADAAEAAwADAAMAAAAFAAEAAwADAAMAAAAGAAEAAwADAAMAAAAHAAEAAwADAAMAAAAAAAIAAwADAAMAAAACAAIAAwADAAMAAAABAAIAAwADAAMAAAADAAIAAwADAAMAAAAFAAIAAwADAAMAAAAGAAIAAwADAAMAAAAHAAIAAwADAAMAAAAPAAQAAwACAAEAAAAPAAUAAwACAAEAAAAPAAIAAwACAAEAAAAPAAYAAwACAAEAAAAPAAcAAwACAAEAAAAPAAgAAwACAAEAAAAPAAkAAwACAAEAAAAPAAMAAwACAAEAAAAJAAIAAwADAAMAAAAKAAIAAwADAAMAAAALAAIAAwADAAMAAAAMAAIAAwADAAMAAAANAAIAAwADAAMAAAAOAAIAAwADAAMAAAAJAP//AwABAAAAAAAJAAAAAwADAAMAAAAJAAEAAwADAAMAAAAKAP//AwABAAAAAAAKAAAAAwADAAMAAAAKAAEAAwADAAMAAAALAP//AwABAAAAAAALAAAAAwADAAMAAAALAAEAAwADAAMAAAAMAP//AwABAAAAAAAMAAAAAwADAAMAAAAMAAEAAwADAAMAAAANAP//AwABAAAAAAANAAAAAwADAAMAAAANAAEAAwADAAMAAAAOAP//AwABAAAAAAAOAAAAAwADAAMAAAAOAAEAAwADAAMAAAAIAP//AwABAAAAAAAIAAAAAwADAAMAAAAIAAEAAwADAAMAAAAIAAIAAwADAAMAAAAPAAAAAwACAAEAAAAPAAEAAwACAAEAAAAPAP//AwACAAAAAAA=")
tile_set = SubResource("TileSet_yxilm")

[node name="Decoration" type="TileMapLayer" parent="TileMap"]
y_sort_enabled = true
use_parent_material = true
position = Vector2(-1, 0)
tile_map_data = PackedByteArray("AAAEAAIABAAAAAAAAAAEAAEABQAAAAAAAAACAAEABwAAAAYAAAAGAAEAAAADAAIAAAAFAAIAAAACAAYAAAAAAAkAAAAEAAcAAAACAAcAAAAAAAAAAAAAAAYAAAAAAAQAAAACAAgAAAAAAAYAAAAEAAYAAAABAAYAAAACAAUAAAABAAQAAAAAAAMAAAAFAAAAAAABAAMAAAAFAAAAAAAGAAIAAAADAAYAAAAAAAUAAAAFAAIAAAAAAAQAAAACAAkAAAAJAAIAAAACAAQAAAAKAAIAAAACAAQAAAAMAAEABwACAA4AAAAOAAMAAAAAAAIAAAA=")
tile_set = SubResource("TileSet_yxilm")

[node name="UperDeco" type="TileMapLayer" parent="TileMap"]
use_parent_material = true
tile_map_data = PackedByteArray("AAACAAcAAAADAAgAAAA=")
tile_set = SubResource("TileSet_yxilm")

[node name="Chest" type="CharacterBody2D" parent="."]
script = ExtResource("9_hhep5")
chest_ui_path = NodePath("../CanvasLayer/Storage_UI")

[node name="Sprite2D" type="Sprite2D" parent="Chest"]
position = Vector2(207, 49)
texture = SubResource("AtlasTexture_cmjdo")

[node name="Area2D" type="Area2D" parent="Chest"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest/Area2D"]
position = Vector2(207, 53)
shape = SubResource("RectangleShape2D_vc333")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Chest"]
position = Vector2(207, 48)
shape = SubResource("RectangleShape2D_snnha")

[node name="player" parent="." instance=ExtResource("8_ip4d6")]
position = Vector2(108, 104)
speed = 100
charge_move_speed = 30
max_charge_time = 1.5
attack_radius = 60
attack_angle_degrees = 90
hitbox_offset = 12
hitbox_halfsize = Vector2(23.5, 29)

[node name="Camera2D" type="Camera2D" parent="player"]
zoom = Vector2(5, 5)
limit_left = -4
limit_top = -4
limit_right = 243
limit_bottom = 164
editor_draw_limits = true

[node name="SynthesisTable" type="CharacterBody2D" parent="."]
script = ExtResource("11_ip4d6")
synthesis_ui_path = NodePath("../CanvasLayer/Synthesis_UI")

[node name="Sprite2D" type="Sprite2D" parent="SynthesisTable"]
position = Vector2(7, 74)
texture = SubResource("AtlasTexture_hhep5")

[node name="Area2D" type="Area2D" parent="SynthesisTable"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SynthesisTable/Area2D"]
visible = false
position = Vector2(13, 75.5)
shape = SubResource("RectangleShape2D_cmjdo")

[node name="CollisionShape2D" type="CollisionShape2D" parent="SynthesisTable"]
position = Vector2(7, 73)
shape = SubResource("RectangleShape2D_e42qu")

[node name="TransitionPoint" type="Node2D" parent="."]
script = ExtResource("12_gi00y")
prompt_label_path = NodePath("Label")

[node name="Area2D" type="Area2D" parent="TransitionPoint"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TransitionPoint/Area2D"]
position = Vector2(72.5, 57)
shape = SubResource("RectangleShape2D_rpgsi")

[node name="Label" type="Label" parent="TransitionPoint"]
offset_left = 90.0
offset_top = 45.0
offset_right = 130.0
offset_bottom = 68.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Storage_UI" parent="CanvasLayer" instance=ExtResource("11_yu5fn")]
visible = false
offset_right = 1154.0
offset_bottom = 648.0

[node name="Synthesis_UI" parent="CanvasLayer" instance=ExtResource("12_ip4d6")]
visible = false
offset_right = 1154.0
offset_bottom = 648.0

[node name="InventoryUi" parent="CanvasLayer" instance=ExtResource("16_o7pnx")]
visible = false
offset_right = 1152.0
offset_bottom = 650.0
player_node = NodePath("../../player")

[node name="Control" type="Control" parent="CanvasLayer"]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -8.0
offset_bottom = 8.0
grow_horizontal = 0
focus_mode = 0
theme_override_styles/hover_pressed = SubResource("StyleBoxTexture_aish6")
theme_override_styles/hover = SubResource("StyleBoxTexture_snnha")
theme_override_styles/pressed = SubResource("StyleBoxTexture_e42qu")
theme_override_styles/normal = SubResource("StyleBoxTexture_ppa51")

[node name="InnerMargin" parent="CanvasLayer/Control" instance=ExtResource("18_snnha")]
visible = false

[node name="Control2" parent="CanvasLayer" instance=ExtResource("19_ppa51")]
visible = false

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
visible = false
polygon = PackedVector2Array(2, 39, 19, 39, 29, 40, 33, 43, 36, 44, 47, 45, 57, 45, 66, 45, 76, 45, 86, 43, 96, 44, 107, 44, 125, 45, 141, 44, 146, 44, 155, 45, 168, 45, 176, 45, 187, 45, 201, 44, 214, 43, 224, 43, 230, 43, 240, 44, 240, 159, 240, 161, 236, 161, 0, 160, 0, 45, -22, 72, -23, 116, -22, 165, 2, 174, 69, 181, 202, 179, 270, 174, 303, 137, 303, 71, 287, 17, 269, -27, 208, -36, 137, -39, 54, -38, -46, 9, -42, 34, -17, 37, -5, 30, -2, 39, -4, 46, 3, 34, 13, 35)

[node name="Label" type="Label" parent="."]
visible = false
offset_left = 76.0
offset_top = 58.0
offset_right = 150.0
offset_bottom = 81.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("19_snnha")
volume_db = 20.0
autoplay = true

[node name="NoticeBoard" parent="." instance=ExtResource("20_e42qu")]
position = Vector2(123, 64)
ui_panel_path = NodePath("../CanvasLayer/Control2")
content = "Here are some notes: Players can click the button in the top-right corner to perform various actions. When the player presses the attack button, they can charge up to deal greater damage. Attribute points (shown as stars in the inventory) can be spent to improve either attack or defense. The Night Vision Potion lets players see farther in dark areas. The Health Potion restores a certain amount of health. Strength and Defense Potions respectively boost attack power and defense—note that Night Vision and the Attack/Defense Potions are time-limited. To gather materials, follow the path to the left and defeat slimes (in later stages, you’ll get materials from other enemies as well). Default key bindings are: I to open the inventory, G to teleport, M to open a chest or crafting station, T to pick up items, and E to attack (press F again to close)."

[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
